<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.ddb.labs</groupId>
    <artifactId>ef2so</artifactId>
    <version>1.6</version>
    <packaging>war</packaging>
    <name>EF2SO</name>
    <description>An Entity Facts-To-Schema.org Converter</description>
    <url>https://github.com/mbuechner/ef2so</url>
    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>mbuechner</id>
            <name>Michael Büchner</name>
            <organization>Deutsche Digitale Bibliothek</organization>
        </developer>
    </developers>
    <organization>
        <name>Deutsche Digitale Bibliothek</name>
        <url>https://www.deutsche-digitale-bibliothek.de/</url>
    </organization>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/mbuechner/ef2so/issues</url>
    </issueManagement>
    <scm>
        <connection>scm:git:https://github.com/mbuechner/ef2so.git</connection>
        <url>https://github.com/mbuechner/ef2so</url>
    </scm>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <sonar.projectKey>mbuechner_ef2so</sonar.projectKey>
        <sonar.organization>mbuechner</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    </properties>
    <dependencies>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.21</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-server</artifactId>
            <version>4.0.0</version>
        </dependency>  
        <dependency>
            <groupId>org.glassfish.jersey.containers</groupId>
            <artifactId>jersey-container-servlet</artifactId>
            <version>4.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.inject</groupId>
            <artifactId>jersey-hk2</artifactId>
            <version>4.0.0</version>
        </dependency>
        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <version>6.1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.metafacture</groupId>
            <artifactId>metamorph</artifactId>
            <version>7.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.metafacture</groupId>
            <artifactId>metafacture-json</artifactId>
            <version>7.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.metafacture</groupId>
            <artifactId>metafacture-strings</artifactId>
            <version>7.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.20.1</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.17</version>
            <scope>compile</scope>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.nixxcode.jvmbrotli</groupId>
            <artifactId>jvmbrotli</artifactId>
            <version>0.2.0</version>
        </dependency>
    </dependencies>
    <reporting>
        <plugins>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>4.9.3.0</version>
            </plugin>
        </plugins>
    </reporting>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <warSourceDirectory>src/main/webapp</warSourceDirectory>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                        </manifest>
                    </archive>
                    <webResources>
                        <resource>
                            <directory>src/main/resources</directory>
                        </resource>
                    </webResources>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-ear-plugin</artifactId>
                <version>3.4.0</version>
                <configuration>
                    <modules>
                        <webModule>
                            <groupId>de.ddb.labs</groupId>
                            <artifactId>ef2so</artifactId>
                            <bundleFileName>ef2so.war</bundleFileName>
                            <contextRoot>/ef2so</contextRoot>
                        </webModule>
                        <ejbModule>
                            <groupId>de.ddb.labs</groupId>
                            <artifactId>ef2so</artifactId>
                            <bundleFileName>ef2so.jar</bundleFileName>
                        </ejbModule>
                    </modules>
                    <displayName>Entity Facts-to-Schema.org Converter</displayName>
                    <generateApplicationXml>true</generateApplicationXml>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.21.0</version>
                <configuration>
                    <outputDirectory>${basedir}/docs</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.9.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>       
                    <release>21</release>
                    <!--
                    <excludes>
                        <exclude>**/de/ddb/labs/ef2so/playground/*.java</exclude>
                    </excludes>
                    -->
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>4.9.3.0</version>
                <dependencies>
                    <dependency>
                        <groupId>com.github.spotbugs</groupId>
                        <artifactId>spotbugs</artifactId>
                        <version>4.9.3</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
        <finalName>ef2so</finalName>
    </build>
</project>



